@@ -81,7 +81,7 @@ typedef unsigned char   uchar_t;
 typedef unsigned short  ushort_t;
 typedef unsigned long   ulong_t;
 typedef unsigned int    uint_t; 
-typedef int             bool_t;
+typedef unsigned char   bool_t;
 
 
 #endif /* __D_SIZE_H__ */
